Some changes in hyprlock

--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -3,6 +3,7 @@ general {
     no_fade_in = false
 }
 
+#back
 background {
     monitor =
     path = ~/Pictures/wallpaper.jpg
@@ -15,6 +16,7 @@ background {
     vibrancy_darkness = 0.8
 }
 
+# passwd input
 input-field {
     monitor =
     size = 250, 50
@@ -55,13 +57,4 @@ label {
     position = 0, 30
     halign = center
     valign = center
-}
-
-unlock-effect {
-    monitor =
-    direction = bottom
-    size = 10
-    step = 0.1
-    fadein = true
-    duration = 0.6
 }
