--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = /home/zenusus/Pictures/wallpaper.jpg
-wallpaper = eDP-1, /home/zenusus/Pictures/wallpaper.jpg
+preload = ~/Pictures/Wallpapers/wallpaper4.jpg
+wallpaper = eDP-1, ~/Pictures/Wallpapers/wallpaper4.jpg
