--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -6,7 +6,7 @@ general {
 #back
 background {
     monitor =
-    path = ~/Pictures/wallpaper.jpg
+    path = ~/Pictures/Wallpapers/wallpaper4.jpg
     blur_size = 8
     blur_passes = 3
     noise = 0.0117
