Updated wallpaper path

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/Pictures/Wallpapers/wallpaper4.jpg
-wallpaper = eDP-1, ~/Pictures/Wallpapers/wallpaper4.jpg
+preload = ~/Pictures/Wallpapers/wallpaper4-orng.png
+wallpaper = eDP-1, ~/Pictures/Wallpapers/wallpaper4-orng.png
